[package]
name = "ckb-voting-test"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
bnum = "0.12.0"
ckb-hash = { version = "0.114.0", default-features = false, features = [
    "ckb-contract",
] }
ckb-std = "0.15.1"
ecb = "0.1.2"
lhash = { version = "1.1.0", features = ["sha256"] }
sha2 = { version = "0.10.8", default-features = false }
